[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Main/Main.gd" type="Script" id=2]
[ext_resource path="res://src/bg/Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/ui_theme.tres" type="Theme" id=4]
[ext_resource path="res://src/Main/UFOspawner.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/sound/shoot.wav" type="AudioStream" id=6]
[ext_resource path="res://src/Main/BombSpawner.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/img/bomb.png" type="Texture" id=8]
[ext_resource path="res://src/UI/Font.tres" type="DynamicFont" id=9]
[ext_resource path="res://src/juice/BombParticles.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 65.4307, 8.00006 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )
width = 340

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerNode" parent="." instance=ExtResource( 1 )]
position = Vector2( 160, 480.63 )
z_index = 128

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 166.855, 520.63 )
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource( 1 )

[node name="ObstacleTimer" type="Timer" parent="."]
autostart = true

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true

[node name="Background" parent="." instance=ExtResource( 3 )]

[node name="UFOspawner" parent="." instance=ExtResource( 5 )]

[node name="ShootAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -3.0

[node name="BombSpawner" parent="." instance=ExtResource( 7 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 50.0
margin_top = 40.0
margin_right = 600.0
margin_bottom = 162.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreLabel" type="Label" parent="VBoxContainer"]
margin_right = 550.0
margin_bottom = 38.0
theme = ExtResource( 4 )
text = "High Score: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 550.0
margin_bottom = 80.0
theme = ExtResource( 4 )
text = "Score: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 550.0
margin_bottom = 122.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_right = 24.0
margin_bottom = 38.0
texture = ExtResource( 8 )

[node name="FireBehind" parent="VBoxContainer/HBoxContainer/TextureRect" instance=ExtResource( 10 )]
position = Vector2( 15.7726, 14.5611 )

[node name="BombsCountLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 28.0
margin_right = 47.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 9 )
text = "0"

[node name="JumpAnchor" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -720.0
margin_right = 462.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JumpButton" type="TouchScreenButton" parent="JumpAnchor"]
position = Vector2( 0, 183.694 )
scale = Vector2( 1.76471, 535.606 )
normal = SubResource( 3 )
shape_visible = false
action = "jump"

[node name="ShootAnchor" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -591.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShootButton" type="TouchScreenButton" parent="ShootAnchor"]
position = Vector2( 39.6428, 162 )
scale = Vector2( 1.63658, 557.301 )
normal = SubResource( 3 )
shape_visible = false
action = "shoot"
[connection signal="timeout" from="ObstacleTimer" to="." method="_on_ObstacleTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
